--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -26,14 +26,19 @@ const textCase = "uppercase";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro - {pageTitle}</title>
-		<style define:vars={{ skillColor }}>
+		<style define:vars={{ skillColor, fontWeight, textCase }}>
 			h1 {
 				color: purple;
 				font-size: 4rem;
 			}
-			.skill {
+			.skillold {
 				color: var(--skillColor);
 				font-weight: bold;
+			}
+			.skill {
+				color: var(--skillColor);
+				font-weight: var(--fontWeight);
+				text-transform: var(--textCase);
 			}
 		</style>
 	</head>
