--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
-import '../styles/global.css';
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
+import "../styles/global.css";
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 
 const pageTitle = "Blog";
 ---
@@ -23,5 +23,8 @@ const pageTitle = "Blog";
 			<li><a href="/posts/post-3/">Post 3</a></li>
 		</ul>
 		<Footer />
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
